<resources>
    <string name="app_name">ChatApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="rrb">RRB</string>
    <string name="login">Login</string>
    <string name="rrb_gmail_com">rrb@gmail.com</string>
    <string name="addchannel">addChannel</string>
    <string name="sign_up_here">Sign Up here</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
</resources>
